Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44499

REG: [4.8.6-5.4.0] QApplication::setKeyboardInputInterval crashes if set before QApplication construct

    XMLWordPrintable

Details

    • 3403f2c79d678afc5b76add2c517d99b9708c32 (qtbase/5.5, 25.2.2015)

    Description

      If QApplication::setKeyboardInputInterval () is set before QApplication is constructed it causes segmentation fault. Stack trace:

      Qt5Guid.dll!QScopedPointer<QObjectData,QScopedPointerDeleter<QObjectData> >::data() Line 135 C++
      Qt5Guid.dll!qGetPtrHelper<QScopedPointer<QObjectData,QScopedPointerDeleter<QObjectData> > >(const QScopedPointer<QObjectData,QScopedPointerDeleter<QObjectData> > & p) Line 961 C++
      Qt5Guid.dll!QGuiApplication::d_func() Line 180 C++
      Qt5Guid.dll!QGuiApplication::styleHints() Line 3326 C++
      Qt5Widgetsd.dll!QApplication::setKeyboardInputInterval(int ms) Line 4032 C++
      StormAdmin.exe!main(int argc, char * * argv) Line 14 C++
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes