src/gui/kernel/qguiapplication_p.h
@@ -218,7 +218,7 @@ public:
 
     static QFont *app_font;
 
-    QStyleHints *styleHints;
+    static QStyleHints *styleHints;
     static bool obey_desktop_settings;
     QInputMethod *inputMethod;
 
